# sp1-light-client

./: README.md
contracts/src/: EthereumLightClient.sol
contracts/test/: Counter.t.sol
light-client/: .env.example  Cargo.toml
light-client/src/: main.rs
program/: Cargo.toml
program/elf/: riscv32im-succinct-zkvm-elf
program/src/: main.rs
script/: Cargo.toml
