[package]
name = "program"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git", branch = "main" }
common = { git = "https://github.com/succinctlabs/helios.git" }
serde_cbor = "0.11.2"
ssz_rs = { version = "0.9.0", features = ["serde"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.11"
